; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/base/extr_test_base.c_test_auto_release.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/base/extr_test_base.c_test_auto_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"hejsan\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_auto_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_auto_release() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = call i32 (...) @heim_auto_release_create()
  store i32 %5, i32* %1, align 4
  %6 = call i32 @heim_string_create(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @heim_auto_release(i32 %7)
  %9 = call i32 @heim_number_create(i32 1)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @heim_auto_release(i32 %10)
  %12 = call i32 (...) @heim_auto_release_create()
  store i32 %12, i32* %2, align 4
  %13 = call i32 @heim_number_create(i32 1)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @heim_auto_release(i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @heim_release(i32 %16)
  %18 = load i32, i32* %1, align 4
  %19 = call i32 @heim_release(i32 %18)
  ret i32 0
}

declare dso_local i32 @heim_auto_release_create(...) #1

declare dso_local i32 @heim_string_create(i8*) #1

declare dso_local i32 @heim_auto_release(i32) #1

declare dso_local i32 @heim_number_create(i32) #1

declare dso_local i32 @heim_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
